[workspace]
resolver = "2"
members = [
  "crates/*",
  "std",
]
[workspace.dependencies]
anyhow = "1.0.91"
inkwell = {version = "0.5.0", git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0-prefer-static"] }
flexstr = { version = "0.9" }
num_enum = {version = "0.7.3"}
ash_std ={ path = "std" }
ash_macro ={ path = "crates/ash_macro" }
once_cell = "1.20.2"
byteorder = "1.5.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3