[package]
name = "ash_std"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja <dreakinlaja@gmail.com>"]
license = "MIT"
description = "Hashlink Std library for ASH"
keywords = ["Haxe", "HashLink"]

[dependencies]
flexstr = { workspace = true }
anyhow = { workspace = true }
libc = "0.2.158"
chrono = "0.4"
once_cell = "1.20.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debugapi", "winnt"] }

[lib]
crate-type = ["cdylib", "rlib"]


[build-dependencies]
bindgen = "0.70.1"
